[tool.poetry]
name = "kursovaja4"
version = "0.1.0"
description = ""
authors = ["kuzhelga <kuzhelga81@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.30.0"
pandas = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
